随着鼠标走动的小狗

--- a/fireworks.html
+++ b/fireworks.html
@@ -20,3 +20,5 @@
 
 <script src='./js/fireworks.js' type="module"></script>
 </html>
+
+<!-- 文章来源于https://juejin.im/post/5b587f59e51d45191e0d04ae -->
